# ml

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  security-audit.yml
crates/ml_linear/: Cargo.toml
crates/ml_linear/src/: lib.rs
crates/ml_linear/tests/: lib.rs
src/: dataset.rs  lib.rs  matrix.rs  traits.rs
src/matrix/: base.rs  cmp.rs  fmt.rs  idx.rs  iter.rs  matrix.rs  mod.rs  ops.rs
src/matrix/linalg/: mod.rs  qr.rs
tests/: matrix.rs
