[package]
name = "ml_linear"
version = "0.1.0"
authors = ["florianvazelle <ponythugflorian@gmail.com>"]
description = "Implementation of a linear model"
edition = "2018"

repository = "https://github.com/florianvazelle/ml/"
readme = "README.md"

keywords = ["machine-learning", "ai", "ml"]

[dependencies]
ml = { version = "0.1.0", path = "../.." }